##
## You should have received a copy of the GNU General Public License
## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added support for global initializer list for structs of integers.
Added support for initializing global arrays of structs using initializer lists
Added support for prefix operators ++ and --

* 1.12.1 - 2025-03-16
** Fixed
Fixed handling of case statements with enums and defines.

* 1.12 - 2025-03-15
** Added
Added support for switch statements
Added support for `enum`s
Added support for `const` on the left side of the type ("west const")
Added support for forward declaration of `struct`s
Added support for multi line macros with `\`s before newlines
Added support for `__LINE__` macro
Added support for `__FILE__` macro
Added support for `__DATE__` macro which will always be `Jan  1 1970` and `__TIME__` which will always be `00:00:00`
Added support for `__STDC__`, `__STDC_HOSTED__`, and `__STDC_VERSION__` macros. `__STDC_VERSION__` claims support for C89.
Added initial support for function-like macros
Added support for octal escape codes in strings and characters
Added support for \? escape code in strings and characters
Added support for multiple variable declarations per statement
Added support for `static`, `_Noreturn`, and `inline` qualifiers for globals
Added support for `static` variables in functions
Added support for implicit return with value 0 from main
Added support for multi token integer types (`unsigned int`, `long long`, `long long int`, etc.)
Added support arrays on the stack
Added support for using variables in `sizeof`, including dereferencing
Added support for string literals in `sizeof`
Added support for variables in loop bodies
Added `__M2C__`, `__M2C_MINOR__`, and `__M2C_PATCHLEVEL__` defines. These will contain the major, minor, and patch version as integers.
Added support for initializer lists for global integer arrays